[gd_scene load_steps=5 format=3 uid="uid://bcivyuhbgwvun"]

[ext_resource type="Script" path="res://scene/Mobs/enemy.gd" id="1_twb1u"]
[ext_resource type="PackedScene" uid="uid://blyq45vogctvp" path="res://scene/DamageBox/damage_box.tscn" id="7_y1v82"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g77xd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x1l5k"]
size = Vector2(38, 26)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_twb1u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_g77xd")

[node name="AttackDirection" type="Node2D" parent="."]

[node name="AttackRange" type="Area2D" parent="AttackDirection"]
collision_layer = 0
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDirection/AttackRange"]
position = Vector2(17, -0.5)
shape = SubResource("RectangleShape2D_x1l5k")
disabled = true

[node name="DamageBox" parent="AttackDirection" instance=ExtResource("7_y1v82")]
script = null

[node name="HurtBox" parent="AttackDirection/DamageBox" index="0"]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HurtBox" index="0"]
position = Vector2(1, 0)

[node name="HitBox" parent="AttackDirection/DamageBox" index="1"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AttackDirection/DamageBox/HitBox" index="0"]
position = Vector2(21, -1)

[node name="Run" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="body_entered" from="AttackDirection/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="area_entered" from="AttackDirection/DamageBox/HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="Run" to="." method="_on_run_timeout"]

[editable path="AttackDirection/DamageBox"]
